OCaml 4.02.1:
-------------

- PR#6466: Non-exhaustive matching warning message for open types is confusing
- PR#6529: fix quadratic-time algorithm in Consistbl.extract.
- PR#6533: broken semantics of %(%) when substitued by a box
  (Benoît Vaugon, report by Boris Yakobowski)
- PR#6536: better documentation of flag # in format strings
- PR#6544: Bytes and CamlinternalFormat missing from threads stdlib.cma
  (Christopher Zimmermann)
- PR#6546: -dsource omits parens for `List ((`String "A")::[]) in patterns
  (Gabriel Scherer, report by Peter Zotov)
- PR#6547: __MODULE__ aborts the compiler if the module name cannot be inferred
- PR#6549: Debug section is sometimes not readable when using -pack
  (Hugo Heuzard, review by Gabriel Scherer)
- PR#6554: fix race condition when retrieving backtraces (Jérémie Dimino,
  Mark Shinwell).
- PR#6564: infinite loop in Mtype.remove_aliases
- PR#6563: Inclusion of packs failing to run module initializers
- PR#6565: compilation fails with Env.Error(_)
- PR#6566: -short-paths and signature inclusion errors

OCaml 4.02.0:
-------------

(Changes that can break existing programs are marked with a "*")

Language features:
- Attributes and extension nodes
  (Alain Frisch)
- Generative functors (PR#5905)
  (Jacques Garrigue)
- Module aliases
  (Jacques Garrigue)
* Alternative syntax for string literals {id|...|id} (can break comments)
  (Alain Frisch)
- Separation between read-only strings (type string) and read-write byte
  sequences (type bytes). Activated by command-line option -safe-string.
  (Damien Doligez)
- PR#6318: Exception cases in pattern matching
  (Jeremy Yallop, backend by Alain Frisch)
- PR#5584: Extensible open datatypes
  (Leo White)

Build system for the OCaml distribution:
- Use -bin-annot when building.
- Use GNU make instead of portable makefiles.
- Updated build instructions for 32-bit Mac OS X on Intel hardware.

Shedding weight:
* Removed Camlp4 from the distribution, now available as third-party software.