@@ -1268,6 +1268,7 @@ let fix_padding padty width str =
 
 (* Add '0' padding to int, int32, nativeint or int64 string representation. *)
 let fix_int_precision prec str =
+  let prec = abs prec in
   let len = String.length str in
   if prec <= len then str else
     let res = Bytes.make prec '0' in
@@ -1312,6 +1313,7 @@ let format_of_aconv iconv c =
 
 (* Generate the format_float first argument form a float_conv. *)
 let format_of_fconv fconv prec =
+  let prec = abs prec in
   let symb = if fconv = Float_F then 'g' else char_of_fconv fconv in
   let buf = buffer_create 16 in
   buffer_add_char buf '%';
@@ -1330,6 +1332,7 @@ let convert_int64 iconv n = format_int64 (format_of_aconv iconv 'L') n
 (* Convert a float to string. *)
 (* Fix special case of "OCaml float format". *)
 let convert_float fconv prec x =
+  let prec = abs prec in
   let str = format_float (format_of_fconv fconv prec) x in
   if fconv <> Float_F then str else
     let len = String.length str in
@@ -1922,55 +1925,56 @@ let fmt_ebb_of_string ?legacy_behavior str =
     match str.[str_ind] with
     | '0' .. '9' ->
       let new_ind, width = parse_positive str_ind end_ind 0 in
-      parse_after_padding pct_ind new_ind end_ind plus sharp space ign
+      parse_after_padding pct_ind new_ind end_ind minus plus sharp space ign
         (Lit_padding (padty, width))
     | '*' ->
-      parse_after_padding pct_ind (str_ind + 1) end_ind plus sharp space ign
-        (Arg_padding padty)
+      parse_after_padding pct_ind (str_ind + 1) end_ind minus plus sharp space
+        ign (Arg_padding padty)
     | _ ->
       begin match padty with
       | Left  ->
         if not legacy_behavior then
           invalid_format_without (str_ind - 1) '-' "padding";
-        parse_after_padding pct_ind str_ind end_ind plus sharp space ign
+        parse_after_padding pct_ind str_ind end_ind minus plus sharp space ign
           No_padding
       | Zeros ->
          (* a '0' padding indication not followed by anything should
            be interpreted as a Right padding of width 0. This is used
            by scanning conversions %0s and %0c *)
-        parse_after_padding pct_ind str_ind end_ind plus sharp space ign
+        parse_after_padding pct_ind str_ind end_ind minus plus sharp space ign
           (Lit_padding (Right, 0))
       | Right ->
-        parse_after_padding pct_ind str_ind end_ind plus sharp space ign
+        parse_after_padding pct_ind str_ind end_ind minus plus sharp space ign
           No_padding
       end
 
   (* Is precision defined? *)
   and parse_after_padding : type x e f .
-      int -> int -> int -> bool -> bool -> bool -> bool -> (x, _) padding ->
-        (_, _, e, f) fmt_ebb =
-  fun pct_ind str_ind end_ind plus sharp space ign pad ->
+      int -> int -> int -> bool -> bool -> bool -> bool -> bool ->
+        (x, _) padding -> (_, _, e, f) fmt_ebb =
+  fun pct_ind str_ind end_ind minus plus sharp space ign pad ->
     if str_ind = end_ind then unexpected_end_of_format end_ind;
     match str.[str_ind] with
     | '.' ->
-      parse_precision pct_ind (str_ind + 1) end_ind plus sharp space ign pad
+      parse_precision pct_ind (str_ind + 1) end_ind minus plus sharp space ign
+        pad
     | symb ->
       parse_conversion pct_ind (str_ind + 1) end_ind plus sharp space ign pad
-        No_precision symb
+        No_precision pad symb
 
   (* Read the digital or '*' precision. *)
   and parse_precision : type x e f .
-      int -> int -> int -> bool -> bool -> bool -> bool -> (x, _) padding ->
-        (_, _, e, f) fmt_ebb =
-  fun pct_ind str_ind end_ind plus sharp space ign pad ->
+      int -> int -> int -> bool -> bool -> bool -> bool -> bool ->
+        (x, _) padding -> (_, _, e, f) fmt_ebb =
+  fun pct_ind str_ind end_ind minus plus sharp space ign pad ->
     if str_ind = end_ind then unexpected_end_of_format end_ind;
-    let parse_literal str_ind =
+    let parse_literal minus str_ind =
       let new_ind, prec = parse_positive str_ind end_ind 0 in
-      parse_after_precision pct_ind new_ind end_ind plus sharp space ign
+      parse_after_precision pct_ind new_ind end_ind minus plus sharp space ign
         pad (Lit_precision prec) in
     match str.[str_ind] with
-    | '0' .. '9' -> parse_literal str_ind
-    | ('+' | '-') when legacy_behavior ->
+    | '0' .. '9' -> parse_literal minus str_ind
+    | ('+' | '-') as symb when legacy_behavior ->
       (* Legacy mode would accept and ignore '+' or '-' before the
          integer describing the desired precision; not that this
          cannot happen for padding width, as '+' and '-' already have
@@ -1979,44 +1983,64 @@ let fmt_ebb_of_string ?legacy_behavior str =
          That said, the idea (supported by this tweak) that width and
          precision literals are "integer literals" in the OCaml sense is
          still blatantly wrong, as 123_456 or 0xFF are rejected. *)
-      parse_literal (str_ind + 1)
+      parse_literal (minus || symb = '-') (str_ind + 1)
     | '*' ->
-      parse_after_precision pct_ind (str_ind + 1) end_ind plus sharp space ign
-        pad Arg_precision
+      parse_after_precision pct_ind (str_ind + 1) end_ind minus plus sharp space
+        ign pad Arg_precision
     | _ ->
       if legacy_behavior then
         (* note that legacy implementation did not ignore '.' without
            a number (as it does for padding indications), but
            interprets it as '.0' *)
-        parse_after_precision pct_ind str_ind end_ind plus sharp space ign pad (Lit_precision 0) else
-      invalid_format_without (str_ind - 1) '.' "precision"
+        parse_after_precision pct_ind str_ind end_ind minus plus sharp space ign
+          pad (Lit_precision 0)
+      else
+        invalid_format_without (str_ind - 1) '.' "precision"
 
   (* Try to read the conversion. *)
-  and parse_after_precision : type x z e f .
-      int -> int -> int -> bool -> bool -> bool -> bool -> (x, _) padding ->
-        (z, _) precision -> (_, _, e, f) fmt_ebb =
-  fun pct_ind str_ind end_ind plus sharp space ign pad prec ->
+  and parse_after_precision : type x y z t e f .
+      int -> int -> int -> bool -> bool -> bool -> bool -> bool ->
+        (x, y) padding -> (z, t) precision -> (_, _, e, f) fmt_ebb =
+  fun pct_ind str_ind end_ind minus plus sharp space ign pad prec ->
     if str_ind = end_ind then unexpected_end_of_format end_ind;
-    parse_conversion pct_ind (str_ind + 1) end_ind plus sharp space ign pad prec
-      str.[str_ind]
+    let parse_conv (type u) (type v) (padprec : (u, v) padding) =
+      parse_conversion pct_ind (str_ind + 1) end_ind plus sharp space ign pad
+        prec padprec str.[str_ind] in
+    (* in legacy mode, some formats (%s and %S) accept a weird mix of
+       padding and precision, which is merged as a single padding
+       information. For example, in %.10s the precision is implicitly
+       understood as padding %10s, but the left-padding component may
+       be specified either as a left padding or a negative precision:
+       %-.3s and %.-3s are equivalent to %-3s *)
+    match pad with
+    | No_padding -> (
+      match minus, prec with
+        | _, No_precision -> parse_conv No_padding
+        | false, Lit_precision n -> parse_conv (Lit_padding (Right, n))
+        | true, Lit_precision n -> parse_conv (Lit_padding (Left, n))
+        | false, Arg_precision -> parse_conv (Arg_padding Right)
+        | true, Arg_precision -> parse_conv (Arg_padding Left)
+    )
+    | pad -> parse_conv pad
 
   (* Case analysis on conversion. *)
-  and parse_conversion : type x y z t e f .
+  and parse_conversion : type x y z t u v e f .
       int -> int -> int -> bool -> bool -> bool -> bool -> (x, y) padding ->
-        (z, t) precision -> char -> (_, _, e, f) fmt_ebb =
-  fun pct_ind str_ind end_ind plus sharp space ign pad prec symb ->
+        (z, t) precision -> (u, v) padding -> char -> (_, _, e, f) fmt_ebb =
+  fun pct_ind str_ind end_ind plus sharp space ign pad prec padprec symb ->
     (* Flags used to check option usages/compatibilities. *)
     let plus_used  = ref false and sharp_used = ref false
     and space_used = ref false and ign_used   = ref false
     and pad_used   = ref false and prec_used  = ref false in
 
     (* Access to options, update flags. *)
-    let get_plus  () = plus_used  := true; plus
-    and get_sharp () = sharp_used := true; sharp
-    and get_space () = space_used := true; space
-    and get_ign   () = ign_used   := true; ign
-    and get_pad   () = pad_used   := true; pad
-    and get_prec  () = prec_used  := true; prec in
+    let get_plus    () = plus_used  := true; plus
+    and get_sharp   () = sharp_used := true; sharp
+    and get_space   () = space_used := true; space
+    and get_ign     () = ign_used   := true; ign
+    and get_pad     () = pad_used   := true; pad
+    and get_prec    () = prec_used  := true; prec
+    and get_padprec () = pad_used   := true; padprec in
 
     (* Check that padty <> Zeros. *)
     let check_no_0 symb (type a) (type b) (pad : (a, b) padding) =
@@ -2035,7 +2059,7 @@ let fmt_ebb_of_string ?legacy_behavior str =
     (* Get padding as a pad_option (see "%_", "%{", "%(" and "%[").
        (no need for legacy mode tweaking, those were rejected by the
        legacy parser as well) *)
-    let get_pad_opt c = match get_pad () with
+    let opt_of_pad c (type a) (type b) (pad : (a, b) padding) = match pad with
       | No_padding -> None
       | Lit_padding (Right, width) -> Some width
       | Lit_padding (Zeros, width) ->
@@ -2046,6 +2070,8 @@ let fmt_ebb_of_string ?legacy_behavior str =
         else incompatible_flag pct_ind str_ind c "'-'"
       | Arg_padding _ -> incompatible_flag pct_ind str_ind c "'*'"
     in
+    let get_pad_opt c = opt_of_pad c (get_pad ()) in
+    let get_padprec_opt c = opt_of_pad c (get_padprec ()) in
 
     (* Get precision as a prec_option (see "%_f").
        (no need for legacy mode tweaking, those were rejected by the
@@ -2077,20 +2103,20 @@ let fmt_ebb_of_string ?legacy_behavior str =
       if get_ign () then Fmt_EBB (Ignored_param (Ignored_caml_char,fmt_rest))
       else Fmt_EBB (Caml_char fmt_rest)
     | 's' ->
-      let pad = check_no_0 symb (get_pad ()) in
+      let pad = check_no_0 symb (get_padprec ()) in
       let Fmt_EBB fmt_rest = parse str_ind end_ind in
       if get_ign () then
-        let ignored = Ignored_string (get_pad_opt '_') in
+        let ignored = Ignored_string (get_padprec_opt '_') in
         Fmt_EBB (Ignored_param (ignored, fmt_rest))
       else
         let Padding_fmt_EBB (pad', fmt_rest') =
           make_padding_fmt_ebb pad fmt_rest in
         Fmt_EBB (String (pad', fmt_rest'))
     | 'S' ->
-      let pad = check_no_0 symb (get_pad ()) in
+      let pad = check_no_0 symb (get_padprec ()) in
       let Fmt_EBB fmt_rest = parse str_ind end_ind in
       if get_ign () then
-        let ignored = Ignored_caml_string (get_pad_opt '_') in
+        let ignored = Ignored_caml_string (get_padprec_opt '_') in
         Fmt_EBB (Ignored_param (ignored, fmt_rest))
       else
         let Padding_fmt_EBB (pad', fmt_rest') =
