@@ -1,0 +1,14 @@
+1 [  foo]
+2 [  foo]
+3 [foo  ]
+4 [foo  ]
+5 [foo  ]
+6 [foo  ]
+1 [  "foo"]
+2 [  "foo"]
+3 ["foo"  ]
+4 ["foo"  ]
+5 ["foo"  ]
+6 ["foo"  ]
+
+All tests succeeded.
