@@ -27,65 +27,65 @@ c
 C
  68 69
 f
- 70 71 72 73 74 75 76 77 78 79 80 81 82 83
+ 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
 F
- 84 85 86 87 88 89 90
+ 85 86 87 88 89 90 91
 e
- 91 92 93 94 95 96 97 98 99 100 101 102 103 104
+ 92 93 94 95 96 97 98 99 100 101 102 103 104 105
 E
- 105 106 107 108 109 110 111 112 113 114 115 116 117 118
+ 106 107 108 109 110 111 112 113 114 115 116 117 118 119
 B
- 119 120
+ 120 121
 ld/li positive
- 121 122 123 124 125 126 127
+ 122 123 124 125 126 127 128
 ld/li negative
- 128 129 130 131 132 133 134
+ 129 130 131 132 133 134 135
 lu positive
- 135 136 137 138 139
+ 136 137 138 139 140
 lu negative
- 140
+ 141
 lx positive
- 141 142 143 144 145 146
+ 142 143 144 145 146 147
 lx negative
- 147
+ 148
 lX positive
- 148 149 150 151 152 153
+ 149 150 151 152 153 154
 lx negative
- 154
+ 155
 lo positive
- 155 156 157 158 159 160
+ 156 157 158 159 160 161
 lo negative
- 161
+ 162
 Ld/Li positive
- 162 163 164 165 166
+ 163 164 165 166 167
 Ld/Li negative
- 167 168 169 170 171
+ 168 169 170 171 172
 Lu positive
- 172 173 174 175 176
+ 173 174 175 176 177
 Lu negative
- 177
+ 178
 Lx positive
- 178 179 180 181 182 183
+ 179 180 181 182 183 184
 Lx negative
- 184
+ 185
 LX positive
- 185 186 187 188 189 190
+ 186 187 188 189 190 191
 Lx negative
- 191
+ 192
 Lo positive
- 192 193 194 195 196 197
+ 193 194 195 196 197 198
 Lo negative
- 198
-a
  199
-t
+a
  200
-{...%}
+t
  201
-(...%)
+{...%}
  202
+(...%)
+ 203
 ! % @ , and constants
- 203 204 205 206 207 208 209
+ 204 205 206 207 208 209 210
 end of tests
 
 All tests succeeded.
